fix(review): add bulk deletion to review entry
